# o6uoq

./: .gitignore  Dockerfile  README.md  fitbit.py  pyproject.toml  strava.py
.github/workflows/: main.yaml
app/: README.md  __init__.py  fitbit.py  fitbit_client.py  oauth_manager.py  strava.py  strava_client.py
docs/: kaizen.md
scripts/: refresh-fitbit-secrets.sh
