[project]
name = "fitness-cli"
version = "1.0.0"
description = "CLI tools for Fitbit and Strava APIs"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
